# emailsdone-python

./: .gitignore  LICENSE  README.md  pyproject.toml
EmailsDone/src/: client.py  emailsdone.py  models.py  templates.py
Examples/: demo_template_registry.py  main.py
src/emailsdone/: __init__.py  client.py  exceptions.py  models.py  templates.py
