[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emailsdone"
version = "0.1.0"
description = "Template-first transactional email SDK for EmailsDone."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "EmailsDone" }
]
dependencies = [
  "requests>=2.31.0"
]
keywords = ["emailsdone", "email", "transactional-email", "sdk"]

[project.urls]
Documentation = "https://emailsdone.dev/docs/libraries/python/"
Repository = "https://emailsdone.dev"
Homepage = "https://emailsdone.dev/docs/libraries/python/"

[tool.setuptools.packages.find]
where = ["src"]
